# django-online-school_new

./: db.sqlite3  pyproject.toml  read.me
online_school/: asgi.py  settings.py  urls.py  wsgi.py
online_school/school/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  views.py
online_school/school/migrations/: 0001_initial.py  0002_alter_teacher_name_alter_teacher_salary_and_more.py  0002_group_name_alter_group_course_alter_student_group.py  0003_alter_student_group.py  0003_remove_teacher_is_active.py  0004_alter_teacher_table.py
